<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jvang.cs.cis3334.asg7_flooring.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_width"
        android:id="@+id/textViewWidthTitle" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editTextWidth"
        android:hint="@string/_0_0"
        android:layout_marginStart="17dp"
        android:inputType="numberDecimal" />

    <TextView
        android:text="@string/room_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewLengthTitle" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editTextLength"
        android:hint="@string/_0_0_length"
        android:layout_marginStart="17dp"
        android:inputType="numberDecimal" />

    <Button
        android:text="@string/show_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonResult" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewsamp" />
</LinearLayout>
